--- a/_config.yml
+++ b/_config.yml
@@ -232,7 +232,7 @@ social_icons:
 
 # Sidebar Avatar
 # in directory: 
-avatar: /assets/images/avatar.gif
+avatar: /assets/images/avatar.jpg
 
 
 # Table Of Contents in the Sidebar
