--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # ---------------------------------------------------------------
 
 # Site
-title: Yuki's World
+title: Yuki's Space
 subtitle:
 description:
 author: wuyq53
@@ -117,7 +117,7 @@ index_with_subtitle: false
 # When running the site in a subdirectory (e.g. domain.tld/blog), remove the leading slash (/archives -> archives)
 menu:
   home: /
-  #categories: /categories/
+  categories: /categories/
   #about: /about/
   archives: /archives/
   tags: /tags/
